--- a/location/templates/location/location_delete_form.html
+++ b/location/templates/location/location_delete_form.html
@@ -1,6 +1,6 @@
 <form method="post" action="{% url 'location_delete' location.pk %}">
   <div class="modal-header">
-    <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+    <h5 class="modal-title" id="crudModalLabel">Confirm Delete</h5>
     <button type="button"
             class="btn-close"
             data-bs-dismiss="modal"
