--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -64,7 +64,7 @@
   <div class="row px-3">
     <div class="col">
       <div class="panel">
-        <div class="panel-heading d-flex justify-content-between">
+        <div class="panel-heading d-flex justify-content-between align-items-center pe-2">
           <span class="h5"><i class="bi bi-folder-fill" style="color: var(--bs-green);"></i> Documents</span>
           <a hx-get="{% url 'item_attachment_upload' item.pk %}"
              hx-trigger="click"
