--- a/item/templates/item/item_list.html
+++ b/item/templates/item/item_list.html
@@ -1,79 +1,62 @@
-{% extends "base.html" %}
+{% extends "object_list_base.html" %}
 {% block title %}
   Items
 {% endblock title %}
-{% block content %}
-  <div class="container-fluid">
-    <div class="panel">
-      <div class="panel-heading d-flex justify-content-between me-2">
-        <span class="h4">Items</span>
-        <span><a href="{% url 'item_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New item</a></span>
-      </div>
-      <div class="panel-content">
-        <div class="table-responsive pt-3">
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Product ID</th>
-                <th scope="col">Category</th>
-                <th scope="col">Manufacturer</th>
-                <th scope="col">Supplier</th>
-                <th scope="col">Description</th>
-                <th scope="col" class="d-none d-lg-table-cell">Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for item in items %}
-                <tr>
-                  <td>
-                    <a href="{% url 'item_detail' item.pk %}" title="item details">{{ item.name }}</a>
-                  </td>
-                  <td>{{ item.product_id }}</td>
-                  <td>
-                    <a href="{% url 'category_detail' item.category.pk %}"
-                       title="item details">{{ item.category }}</a>
-                  </td>
-                  <td>
-                    {% if item.manufacturer %}
-                      <a href="{% url 'company_detail' item.manufacturer.pk %}">{{ item.manufacturer }}</a>
-                    {% endif %}
-                  </td>
-                  <td>
-                    {% if item.supplier %}
-                      <a href="{% url 'company_detail' item.supplier.pk %}">{{ item.supplier }}</a>
-                    {% endif %}
-                  </td>
-                  <td>{{ item.description }}</td>
-                  <td class="d-none d-lg-table-cell">
-                    <a href="{% url 'item_update' item.pk %}"><i class="bi bi-pencil-square"></i></a>
-                    <a hx-get="{% url 'item_delete' item.pk %}"
-                       hx-trigger="click"
-                       hx-target="#deleteModal .modal-content"
-                       hx-swap="innerHTML"
-                       data-bs-toggle="modal"
-                       data-bs-target="#deleteModal"
-                       href="javascript:void(0);"><i class="bi bi-trash"></i></a>
-                  </td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
-        {% include "partials/pagination_simple.html" %}
-      </div>
-    </div>
+{% block panel_title %}
+  All Items
+{% endblock panel_title %}
+{% block panel_actions %}
+  <a href="{% url 'item_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New item</a>
+{% endblock panel_actions %}
+{% block panel_content %}
+  <div class="table-responsive pt-3">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Product ID</th>
+          <th scope="col">Category</th>
+          <th scope="col">Manufacturer</th>
+          <th scope="col">Supplier</th>
+          <th scope="col">Description</th>
+          <th scope="col" class="d-none d-lg-table-cell">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for item in items %}
+          <tr>
+            <td>
+              <a href="{% url 'item_detail' item.pk %}" title="item details">{{ item.name }}</a>
+            </td>
+            <td>{{ item.product_id }}</td>
+            <td>
+              <a href="{% url 'category_detail' item.category.pk %}"
+                 title="item details">{{ item.category }}</a>
+            </td>
+            <td>
+              {% if item.manufacturer %}
+                <a href="{% url 'company_detail' item.manufacturer.pk %}">{{ item.manufacturer }}</a>
+              {% endif %}
+            </td>
+            <td>
+              {% if item.supplier %}
+                <a href="{% url 'company_detail' item.supplier.pk %}">{{ item.supplier }}</a>
+              {% endif %}
+            </td>
+            <td>{{ item.description }}</td>
+            <td class="d-none d-lg-table-cell">
+              <a href="{% url 'item_update' item.pk %}"><i class="bi bi-pencil-square"></i></a>
+              <a hx-get="{% url 'item_delete' item.pk %}"
+                 hx-trigger="click"
+                 hx-target="#crudModal .modal-content"
+                 hx-swap="innerHTML"
+                 data-bs-toggle="modal"
+                 data-bs-target="#crudModal"
+                 href="javascript:void(0);"><i class="bi bi-trash"></i></a>
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
-  <!-- Delete Modal -->
-  <div class="modal fade"
-       id="deleteModal"
-       tabindex="-1"
-       aria-labelledby="deleteModalLabel"
-       aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <!-- HTMX rendered content -->
-      </div>
-    </div>
-  </div>
-{% endblock content %}
+{% endblock panel_content %}
