--- a/item/templates/item/stockitem_delete_form.html
+++ b/item/templates/item/stockitem_delete_form.html
@@ -1,6 +1,6 @@
 <form method="post" action="{% url 'stock_delete' stockitem.pk %}">
   <div class="modal-header">
-    <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+    <h5 class="modal-title" id="crudModalLabel">Confirm Delete</h5>
     <button type="button"
             class="btn-close"
             data-bs-dismiss="modal"
