--- a/location/templates/location/location_detail.html
+++ b/location/templates/location/location_detail.html
@@ -23,6 +23,10 @@
             <td width="85%">{{ location.name }}</td>
           </tr>
           <tr>
+            <td class="text-muted">Room:</td>
+            <td>{{ location.room }}</td>
+          </tr>
+          <tr>
             <td class="text-muted">Description:</td>
             <td>{{ location.description }}</td>
           </tr>
