--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
         </nav>
       {% endblock header %}
     </header>
-    <main id="main-content" class="mt-3 mx-2">
+    <main id="main-content" class="mx-2">
       <!-- Alerts goes here -->
       {% block alerts %}
         <div class="container-fluid">
@@ -77,6 +77,7 @@
             {% endfor %}
           {% endif %}
         </div>
+        <div class="pt-2"><!--page top blank space control--></div>
       {% endblock alerts %}
       <!-- Main content goes here -->
       {% block content %}
