category CRUD views

--- a/category/templates/category/category_create.html
+++ b/category/templates/category/category_create.html
@@ -1,11 +1,26 @@
 {% extends "object_create_base.html" %}
-{% load crispy_forms_tags %}
 {% block title %}
-  Category
+  Category Create
 {% endblock title %}
 {% block panel_title %}
-  Category Create
+  Add a New Item Category
 {% endblock panel_title %}
 {% block create_form %}
-  {{ form|crispy }}
+  <div class="px-3 pt-3">
+    <div id="div_id_name" class="input-group mb-3">
+      <span class="input-group-text">Name</span>
+      <input type="text"
+             name="name"
+             maxlength="50"
+             autocomplete="off"
+             class="textinput form-control"
+             required
+             id="id_name">
+    </div>
+    <div id="div_id_description" class="input-group mb-3">
+      <span class="input-group-text">Description</span>
+      <textarea name="description" cols="40" rows="3" class="textarea form-control" id="id_description">
+</textarea>
+    </div>
+  </div>
 {% endblock create_form %}
