--- a/category/templates/category/category_update.html
+++ b/category/templates/category/category_update.html
@@ -1,11 +1,31 @@
 {% extends "object_update_base.html" %}
 {% load crispy_forms_tags %}
 {% block title %}
-Category
+  Category
 {% endblock title %}
 {% block panel_title %}
-Category Update
+  Update the Category: {{ object.name }}
 {% endblock panel_title %}
 {% block update_form %}
-  {{ form|crispy }}
+  <div class="px-3 pt-3">
+    <div id="div_id_name" class="input-group mb-3">
+      <span class="input-group-text">Name</span>
+      <input type="text"
+             name="name"
+             maxlength="50"
+             autocomplete="off"
+             class="textinput form-control"
+             value="{{ object.name }}"
+             required
+             id="id_name">
+    </div>
+    <div id="div_id_description" class="input-group mb-3">
+      <span class="input-group-text">Description</span>
+      <textarea name="description"
+                cols="40"
+                rows="3"
+                class="textarea form-control"
+                id="id_description">{{ object.description }}</textarea>
+    </div>
+  </div>
 {% endblock update_form %}
