--- a/location/templates/location/location_update.html
+++ b/location/templates/location/location_update.html
@@ -30,8 +30,11 @@
     </div>
     <div id="div_id_description" class="input-group mb-3">
       <span class="input-group-text">Description</span>
-      <textarea name="description" cols="40" rows="3" class="textarea form-control" id="id_description">{{ location.description }}
-</textarea>
+      <textarea name="description"
+                cols="40"
+                rows="3"
+                class="textarea form-control"
+                id="id_description">{{ location.description }}</textarea>
     </div>
   </div>
 {% endblock update_form %}
