--- a/category/templates/category/category_list.html
+++ b/category/templates/category/category_list.html
@@ -13,22 +13,39 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Categories</th>
-          <th scope="col">Description</th>
-          <th scope="col">Items</th>
-          <th scope="col" class="d-none d-lg-table-cell">Actions</th>
+          <th width="15%">Categories</th>
+          <th width="25%" class="d-none d-lg-table-cell">Description</th>
+          <th class="d-none d-lg-table-cell">Items</th>
+          <th width="5%" class="d-lg-table-cell">Actions</th>
         </tr>
       </thead>
       <tbody>
         {% for category in categories %}
-          <tr>
-            <td>
+          <tr style="height: 120px;">
+            <td class="align-middle">
               <a href="{% url 'category_detail' category.pk %} "
                  title="category details">{{ category.name }}</a>
             </td>
-            <td>{{ category.description }}</td>
-            <td>{{ category.items.all }}</td>
+            <td class="small d-none d-lg-table-cell">{{ category.description|truncatechars:120 }}</td>
             <td class="d-none d-lg-table-cell">
+              <div class="row ps-2 small">
+                {% for item in category.items.all|slice:10 %}
+                  <div class="col-4">
+                    <a href="{% url 'item_detail' item.pk %}"
+                       class="pe-2"
+                       title="item details">
+                      <i class="bi bi-box2"></i> {{ item.name }}
+                    </a>
+                  </div>
+                {% endfor %}
+                <div class="col-12 small">
+                  {% if category.items.count > 10 %}
+                    <a href="{% url 'category_detail' category.pk %}">More ...</a>
+                  {% endif %}
+                </div>
+              </div>
+            </td>
+            <td class="d-lg-table-cell align-middle">
               <a href="{% url 'category_update' category.pk %}"><i class="bi bi-pencil-square"></i></a>
               <a hx-get="{% url 'category_delete' category.pk %}"
                  hx-trigger="click"
