--- a/templates/object_create_base.html
+++ b/templates/object_create_base.html
@@ -17,7 +17,7 @@
             <input type="hidden" name="next" value="{{ request.GET.next }}">
             {% block create_form %}
             {% endblock create_form %}
-            <div class="text-end">
+            <div class="text-end pe-3">
               <button type="submit" class="btn btn-success">Save</button>
             </div>
           </form>
